Tutorial: Add Data: connect text field in add item screen to controller

--- a/SampleTodo/Base.lproj/Main.storyboard
+++ b/SampleTodo/Base.lproj/Main.storyboard
@@ -85,6 +85,9 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="textField" destination="MSW-14-aCe" id="NAP-dB-txb"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                 <exit id="jkV-j9-Gf0" userLabel="Exit" sceneMemberID="exit"/>
